Input moved to Utils

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         <!-- dge lib -->
         <script type="text/javascript" src="scripts/dge/helpers.js"></script>
+		<script type="text/javascript" src="scripts/dge/Utils/Input.js"></script>
         <script type="text/javascript" src="scripts/dge/Object.js"></script>
         <script type="text/javascript" src="scripts/dge/Container.js"></script>
 		<script type="text/javascript" src="scripts/dge/Vector2.js"></script>
@@ -79,7 +80,6 @@
         <script type="text/javascript" src="scripts/dge/Level.js"></script>
         <script type="text/javascript" src="scripts/dge/Rectangle.js"></script>
         <script type="text/javascript" src="scripts/dge/Objects/Entity.js"></script>
-        <script type="text/javascript" src="scripts/dge/Input.js"></script>
 
         <!-- Game sources -->
         <script type="text/javascript" src="scripts/pacman.js"></script>
