Implemented: DIC, provisional use of RequireJS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		    </header>
 		    
 		    <!-- Game screen -->
-			<div id="pacman">
+			<div id="dge">
 				<div class="score">score: 0 / 0</div>
             </div>
 
@@ -57,31 +57,6 @@
 	    
 		<!-- JavaScript -->
 		<script src="scripts/libs/jquery.min.js"></script>
-
-        <!-- dge lib -->
-        <script type="text/javascript" src="scripts/dge/helpers.js"></script>
-		<script type="text/javascript" src="scripts/dge/Utils/Input.js"></script>
-        <script type="text/javascript" src="scripts/dge/Object.js"></script>
-        <script type="text/javascript" src="scripts/dge/Container.js"></script>
-		<script type="text/javascript" src="scripts/dge/Vector2.js"></script>
-
-		<script type="text/javascript" src="scripts/dge/Graphics/Renderer.js"></script>
-        <script type="text/javascript" src="scripts/dge/Graphics/Image.js"></script>
-        <script type="text/javascript" src="scripts/dge/Graphics/AnimationSheet.js"></script>
-
-		<script type="text/javascript" src="scripts/dge/Objects/Control.js"></script>
-		<script type="text/javascript" src="scripts/dge/Objects/Container.js"></script>
-		<script type="text/javascript" src="scripts/dge/Objects/DrawableControl.js"></script>
-        <script type="text/javascript" src="scripts/dge/Objects/GameObject.js"></script>
-
-		<script type="text/javascript" src="scripts/dge/Game.js"></script>
-
-        <script type="text/javascript" src="scripts/dge/CollisionMap.js"></script>
-        <script type="text/javascript" src="scripts/dge/Level.js"></script>
-        <script type="text/javascript" src="scripts/dge/Rectangle.js"></script>
-        <script type="text/javascript" src="scripts/dge/Objects/Entity.js"></script>
-
-        <!-- Game sources -->
-        <script type="text/javascript" src="scripts/pacman.js"></script>
+		<script data-main="scripts/main" src="scripts/libs/require.js"></script>
     </body>
 </html>
