Improved dge.Rectangle

--- a/index.html
+++ b/index.html
@@ -51,12 +51,21 @@
 		    <!-- Page footer -->
 		    <footer>
 		    	<p>&copy; 2012 Drahomír Hanák</p>
+				<p>
+					<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cz/">
+						<img alt="Licence Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/cz/80x15.png" />
+					</a>
+				</p>
+				<p>
+					<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">DGE</span>, jejímž autorem je <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.drahak.eu" property="cc:attributionName" rel="cc:attributionURL">Drahomír Hanák</a>, podléhá licenci <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cz/">Creative Commons Uveďte autora-Nevyužívejte dílo komerčně-Zachovejte licenci 3.0 Česko </a>.<br />Vytvořeno na základě tohoto díla: <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/drahak/dge" rel="dct:source">https://github.com/drahak/dge</a>
+				</p>
 		    </footer>
 		    
 		</div>
 	    
 		<!-- JavaScript -->
 		<script src="scripts/libs/jquery.min.js"></script>
+		<script src="scripts/libs/box2d/box2d.js"></script>
 		<script data-main="scripts/main" src="scripts/libs/require.js"></script>
     </body>
 </html>
