Fixed GameTime.removeListener bug

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -42,6 +42,8 @@
 	<script type="text/javascript" src="spec/dge/Vector2Spec.js"></script>
 	<script type="text/javascript" src="spec/dge/CollisionMapSpc.js"></script>
 	<script type="text/javascript" src="spec/dge/RectangleSpec.js"></script>
+	<script type="text/javascript" src="spec/dge/GameTimeSpec.js"></script>
+	<script type="text/javascript" src="spec/dge/AssetSpec.js"></script>
 
 	<script type="text/javascript">
 	(function() {
